--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,86 @@
 /* CSS declarations go here */
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i');
+html, body{
+    width: 100%;
+    height: 100%;
+}
+body{
+    font-family: 'Noto Sans', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    background-color: #F6F9FC;
+}
+.layout-one {
+  padding: 10px;
+  background: beige;
+}
+
+.layout-two {
+  padding: 10px;
+  background: #eee;
+}
+
+#LogInPage{
+
+}
+/* color : #616161*/
+#__TopMenu{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    height: 50px;
+    font-size: 13px;
+    box-sizing: border-box;
+    width: 100%;
+    color: #858585;
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 20px 0px rgba(157, 193, 162, 0.2);
+}
+#__logo{
+    font-size: 14px;
+    padding: 8px 0;
+    width: 100px;
+}
+#__URL {
+    background-color: #EEEEEE;
+    border-radius: 15px;
+    line-height: 14px;
+    width: calc(90% - 100px);
+}
+#__URL .breadcrumb {
+    padding: 8px 0;
+    margin-right: 10px;
+    background-color: transparent;
+    width: calc(100% - 80px);
+}
+#__URL .breadcrumb a {
+    color: inherit;
+}
+#__URL .breadcrumb a:hover {
+    color: #FF7272;
+}
+.icon {
+    font-size: 20px;
+    line-height: 1em;
+    width: 20px;
+    margin: 5px 10px;
+    height: 20px;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    opacity: 0.5;
+}
+.icon:hover {
+    opacity: 1;
+}
+#__URL .breadcrumb-item + .breadcrumb-item::before{
+    content: '\e00f';
+    font-family: "continium" !important;
+    font-size: 11px;
+    line-height: 14px;
+}
+.icon.name{
+    font-size: 13px;
+    line-height: 20px;
+    position: relative;
+    top: -5px;
+    margin-right: 0;
+}
