--- a/client/main.css
+++ b/client/main.css
@@ -1,11 +1,12 @@
 /* CSS declarations go here */
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Raleway:200,200i,400,400i,800,900');
 html, body{
     width: 100%;
     height: 100%;
 }
 body{
-    font-family: 'Noto Sans', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-family: 'Raleway', 'Noto Sans', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
     background-color: #F6F9FC;
 }
 .layout-one {
